input_rows input_cols input_name_cols input_id_cols input_add_boxes
input_boxes input_style (and digits) to decide size and height and stuff
 - removed HTMLRenderer
 - booleans now can render as menus, radio buttons OR a checkbox 
 - plain text fields can have textareas as their input field.
 - phrase files now have namespaces for ep:foo like other XML files with
XHTML in.
[C] - added varchar_size option to set how big the SQL fields are.
[C] - added FIELD PROPERTY DEFAULTS SECTION WITH the fields:
input_rows input_cols input_name_cols input_id_cols input_add_boxes
input_boxes digits
[C] - fixed BUG in default field validator - now handles multiple
URL fields.
[C] - displaylines renamed to input_rows


26/01/2002

 - added default_action to the render_input_form method and code to
support it.
 - added button order and default_action to all render_input_form calls
where appropriate.
 - fixed braino in new metafield properites handling. All metafields need
a handle on the archive object, so those without a dataset must now have
an archive set. Added archive values to all calls to MetaField->new
 - added a client() method to Session which returns a code for the client,
currently: GECKO, LYNX, MSIE4, MSIE5, MSIE6 and "?". Used this to test
for lynx in the default action handler and not print the image button if 
it is lynx (as lynx ALWAYS displays it, we want it hidden).

28/01/2002

 - new metafield property: browse_link - which is the id of the browse view
it should link to when rendering.
 - added "generic" citations handling, via DataObj render_description which
replaces User::full_name and EPrint::short_title and Document::render_desc
 - added new param to template title field: textonly="yes" to squash down
the XHTML in the <title> into text only.
 - moved render_citation and render_citation_link from Document, EPrint and
User into DataObj. 
 - added get_url to Document, EPrint and User - (renamed the functions
static_url and url)