@@ -11,11 +11,11 @@
 <p>This version ( &version; ) is still alpha code.</p>
 
 <ul>
- <li><a href="&perl_url;/set_password">User Registration</a> - allows you to:</li>
+ <li><a href="&perl_url;/set_password">User Registration</a> - allows you to:
  <ul>
   <li>submit records into the review buffer</li>
   <li>edit your user record</li>
- </ul>
+ </ul></li>
  <li><a href="&perl_url;/search">Search</a> - assuming there is any data in the archive.</li>
  <li><a href="&base_url;/view/">Browse</a> - Browse the database.</li>
  <li><a href="&userhome;">User Area</a> - should work once you've registered.</li>
